--- a/app/src/main/res/layout/icon_text_entry_view.xml
+++ b/app/src/main/res/layout/icon_text_entry_view.xml
@@ -60,13 +60,12 @@
         />
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/smItemSwitch"
+            style="@style/toggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:track="@drawable/toggle_track"
-            android:thumb="@drawable/toggle_thumb"
             android:visibility="gone"
             />
 
