--- a/app/src/main/res/layout/app_routing_table_header.xml
+++ b/app/src/main/res/layout/app_routing_table_header.xml
@@ -10,15 +10,11 @@
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/smProtectAllApps"
-            style="@style/button_text_in_fragment"
+            style="@style/super_toggle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_padding"
             android:layout_marginBottom="15dp"
-            android:background="@drawable/common_rounded_square_action"
-            android:padding="@dimen/switch_padding"
-            android:text="@string/action_protect_all_apps"
-            android:thumb="@drawable/toggle_thumb"
-            app:track="@drawable/toggle_track" />
+            android:text="@string/action_protect_all_apps"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
