--- a/app/src/main/res/layout/exitnode_header_view.xml
+++ b/app/src/main/res/layout/exitnode_header_view.xml
@@ -25,15 +25,12 @@
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/smProtectAllApps"
-            style="@style/button_text_in_fragment"
+            style="@style/exit_node_super_toggle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_padding"
             android:layout_marginBottom="15dp"
-            android:background="@drawable/common_rounded_square_action"
             android:padding="@dimen/switch_padding"
-            android:text="@string/exit_location_automatic"
-            android:thumb="@drawable/toggle_thumb"
-            app:track="@drawable/toggle_track" />
+            android:text="@string/exit_location_automatic" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
