--- a/app/src/main/res/layout/include_connection_stats.xml
+++ b/app/src/main/res/layout/include_connection_stats.xml
@@ -172,17 +172,16 @@
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switch_protect_apps"
+                style="@style/toggle"
                 android:layout_width="56dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="24dp"
                 android:checked="@{viewModel.allAppsProtected}"
                 android:onCheckedChanged="@{viewModel::onProtectAppsChanged}"
-                android:thumb="@drawable/switch_thumb_connected_stats"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_protect_all_apps_label"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_stat_title"
-                app:track="@drawable/switch_track_shape"
-                app:trackTint="@color/switch_track_color" />
+                />
 
             <TextView
                 android:id="@+id/tv_protect_all_apps_label"
@@ -192,7 +191,6 @@
                 android:layout_marginStart="24dp"
                 android:text="@{viewModel.allAppsProtected? @string/action_protect_all_apps : @string/label_not_protected}"
                 android:textFontWeight="550"
-                android:thumb="@drawable/switch_thumb_connected_stats"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ic_protect_app"
                 app:layout_constraintTop_toBottomOf="@+id/tv_stat_title" />
