--- a/app/src/main/res/layout/app_detail_layout_no_tor_support.xml
+++ b/app/src/main/res/layout/app_detail_layout_no_tor_support.xml
@@ -124,6 +124,15 @@
             android:onCheckedChanged="@{viewModel::onProtectThisAppChanged}"
             />
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_circuits"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingVertical="@dimen/default_padding"
+            style="@style/paragraph_title"
+            android:text="@string/circuits"
+            />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_circuit_cards"
             android:layout_width="match_parent"
