--- a/app/src/main/res/layout/app_detail_layout_no_tor_support.xml
+++ b/app/src/main/res/layout/app_detail_layout_no_tor_support.xml
@@ -66,7 +66,9 @@
 
             <View
                 android:layout_height="96dp"
-                android:layout_width="1dp" />
+                android:layout_width="1dp"
+                android:background="@color/indigo50"
+                />
 
             <RelativeLayout
                 android:layout_width="0dp"
