--- a/app/src/main/res/menu/app_routing_menu.xml
+++ b/app/src/main/res/menu/app_routing_menu.xml
@@ -6,5 +6,6 @@
         android:id="@+id/refresh_circuits"
         android:icon="@drawable/ic_all_new_circuits"
         android:title="@string/action_refresh_circuits"
+        android:contentDescription="@string/action_refresh_circuits"
         app:showAsAction="always" />
 </menu>
