--- a/app/src/main/res/layout/fragment_connectionsettings.xml
+++ b/app/src/main/res/layout/fragment_connectionsettings.xml
@@ -42,6 +42,7 @@
 
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
+                    app:navigationIcon="?attr/homeAsUpIndicator"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
@@ -72,47 +73,57 @@
                     android:background="@drawable/round_bridge_info_bg">
 
                     <androidx.appcompat.widget.SwitchCompat
-                        android:id="@+id/smProtectAllApps"
+                        android:id="@+id/switch_use_bridge"
                         style="@style/super_toggle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/use_a_bridge"
+                        android:checked="@{viewModel.useBridge}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView6"
+                        android:id="@+id/tv_current_bridge_title"
                         style="@style/connection_current_bridge_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="32dp"
                         android:layout_marginTop="24dp"
                         android:text="@string/current_bridge"
+                        android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/smProtectAllApps" />
+                        app:layout_constraintTop_toBottomOf="@+id/switch_use_bridge" />
 
                     <TextView
-                        android:id="@+id/textView7"
+                        android:id="@+id/tv_current_bridge_value"
                         style="@style/connection_current_bridge"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="24dp"
                         android:text="@string/bridge_option_obfs4_built"
+                        android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="@+id/textView6"
-                        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                        app:layout_constraintStart_toStartOf="@+id/tv_current_bridge_title"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_current_bridge_title" />
 
 
                     <ImageView
                         android:id="@+id/ic_connection_settings"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="24dp"
+                        android:layout_marginEnd="16dp"
+                        android:paddingVertical="8dp"
+                        android:paddingEnd="8dp"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:onClick="@{handler::onBridgeSettingsClicked}"
+                        android:contentDescription="@string/bridge_settings"
                         android:src="@drawable/connection_settings"
-                        app:layout_constraintBottom_toBottomOf="@+id/textView7"
+                        android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
+                        app:layout_constraintBottom_toBottomOf="@+id/tv_current_bridge_value"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/textView6" />
+                        app:layout_constraintTop_toTopOf="@+id/tv_current_bridge_title" />
 
                     <View
                         android:id="@+id/view_divider"
@@ -120,9 +131,10 @@
                         android:layout_height="28dp"
                         android:layout_marginEnd="12dp"
                         android:background="@color/indigo50"
-                        app:layout_constraintBottom_toBottomOf="@+id/textView7"
+                        android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
+                        app:layout_constraintBottom_toBottomOf="@+id/tv_current_bridge_value"
                         app:layout_constraintEnd_toStartOf="@+id/ic_connection_settings"
-                        app:layout_constraintTop_toTopOf="@+id/textView6" />
+                        app:layout_constraintTop_toTopOf="@+id/tv_current_bridge_title" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
