--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -56,6 +56,7 @@
     <color name="indigo90">#130D32</color>
 
     <color name="white_40">#66FFFFFF</color>
+    <color name="white">#FFFFFF</color>
 
     <color name="purple30">#C88BF2</color>
     <color name="purple40">#B86DE8</color>
