update Connection screen on bridge selection

--- a/app/src/main/res/layout/fragment_connectionsettings.xml
+++ b/app/src/main/res/layout/fragment_connectionsettings.xml
@@ -101,7 +101,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="24dp"
-                        android:text="@string/bridge_option_obfs4_built"
+                        android:text="@{viewModel.bridgeType}"
                         android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/tv_current_bridge_title"
