show selected bridge type in main screen (ConnectFragment)

--- a/app/src/main/res/layout/include_connection_stats.xml
+++ b/app/src/main/res/layout/include_connection_stats.xml
@@ -106,7 +106,6 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="4dp"
                 android:text="@{viewModel.dataUsageUpstream}"
-                android:textFontWeight="550"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ic_up_traffic"
                 app:layout_constraintTop_toBottomOf="@+id/tv_up_label"
@@ -119,7 +118,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="24dp"
                 android:text="@{viewModel.dataUsageDiffUpstream}"
-                android:textFontWeight="550"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_up_traffic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_up_label"
@@ -190,7 +188,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:text="@{viewModel.allAppsProtected? @string/action_protect_all_apps : @string/label_not_protected}"
-                android:textFontWeight="550"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ic_protect_app"
                 app:layout_constraintTop_toBottomOf="@+id/tv_stat_title" />
@@ -257,8 +254,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="8dp"
-                android:text="@string/connect_direct_to_tor"
-                android:textFontWeight="550"
+                android:text="@{viewModel.connectionHint}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/view3"
                 app:layout_constraintStart_toEndOf="@+id/ic_connection"
