--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,10 +74,6 @@
         <item name="android:maxLines">5</item>
         <item name="android:ellipsize">end</item>
     </style>
-    <!--         <item name="android:colorControlNormal">@color/textOnPrimary</item>
-        <item name="android:colorAccent">@color/purpleNormal</item>
-        <item name="android:tint">@color/purpleNormal</item>
-        -->
 
     <style name="app_circuits_text" parent="TextAppearance.MaterialComponents.Body1">
         <item name="android:fontFamily">@font/figtree_regular</item>
@@ -240,6 +236,7 @@
         <item name="android:lineSpacingExtra">5sp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontWeight" tools:targetApi="o">550</item>
     </style>
 
     <style name="stats_kbits_number">
