--- a/app/src/main/res/layout/fragment_connectionsettings.xml
+++ b/app/src/main/res/layout/fragment_connectionsettings.xml
@@ -83,59 +83,67 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/tv_current_bridge_title"
-                        style="@style/connection_current_bridge_title"
-                        android:layout_width="wrap_content"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/cl_bridgeSettingsContainer"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginTop="24dp"
-                        android:text="@string/current_bridge"
-                        android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/switch_use_bridge" />
-
-                    <TextView
-                        android:id="@+id/tv_current_bridge_value"
-                        style="@style/connection_current_bridge"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="24dp"
-                        android:text="@{viewModel.bridgeType}"
-                        android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="@+id/tv_current_bridge_title"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_current_bridge_title" />
-
-
-                    <ImageView
-                        android:id="@+id/ic_connection_settings"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:paddingVertical="8dp"
-                        android:paddingEnd="8dp"
                         android:clickable="true"
                         android:focusable="true"
                         android:onClick="@{handler::onBridgeSettingsClicked}"
-                        android:contentDescription="@string/bridge_settings"
-                        android:src="@drawable/connection_settings"
                         android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
-                        app:layout_constraintBottom_toBottomOf="@+id/tv_current_bridge_value"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/tv_current_bridge_title" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/switch_use_bridge"
+                        app:layout_constraintStart_toEndOf="parent"
+                        >
 
-                    <View
-                        android:id="@+id/view_divider"
-                        android:layout_width="2dp"
-                        android:layout_height="28dp"
-                        android:layout_marginEnd="12dp"
-                        android:background="@color/indigo50"
-                        android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
-                        app:layout_constraintBottom_toBottomOf="@+id/tv_current_bridge_value"
-                        app:layout_constraintEnd_toStartOf="@+id/ic_connection_settings"
-                        app:layout_constraintTop_toTopOf="@+id/tv_current_bridge_title" />
+                        <TextView
+                            android:id="@+id/tv_current_bridge_title"
+                            style="@style/connection_current_bridge_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="32dp"
+                            android:layout_marginTop="24dp"
+                            android:text="@string/current_bridge"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
 
+                        <TextView
+                            android:id="@+id/tv_current_bridge_value"
+                            style="@style/connection_current_bridge"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="24dp"
+                            android:text="@{viewModel.bridgeType}"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="@+id/tv_current_bridge_title"
+                            app:layout_constraintTop_toBottomOf="@+id/tv_current_bridge_title" />
+
+                        <ImageView
+                            android:id="@+id/ic_connection_settings"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="16dp"
+                            android:paddingVertical="8dp"
+                            android:paddingEnd="8dp"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:contentDescription="@string/bridge_settings"
+                            android:src="@drawable/connection_settings"
+                            app:layout_constraintBottom_toBottomOf="@+id/tv_current_bridge_value"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="@+id/tv_current_bridge_title" />
+
+                        <View
+                            android:id="@+id/view_divider"
+                            android:layout_width="2dp"
+                            android:layout_height="28dp"
+                            android:layout_marginEnd="12dp"
+                            android:background="@color/indigo50"
+                            android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
+                            app:layout_constraintBottom_toBottomOf="@+id/tv_current_bridge_value"
+                            app:layout_constraintEnd_toStartOf="@+id/ic_connection_settings"
+                            app:layout_constraintTop_toTopOf="@+id/tv_current_bridge_title" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
