--- a/app/src/main/res/layout/fragment_connectionsettings.xml
+++ b/app/src/main/res/layout/fragment_connectionsettings.xml
@@ -51,15 +51,15 @@
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
-        <ScrollView
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginVertical="@dimen/activity_vertical_margin"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/activity_vertical_margin"
                 android:orientation="vertical">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -124,9 +124,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="16dp"
                             android:paddingVertical="8dp"
-                            android:paddingEnd="8dp"
-                            android:clickable="true"
-                            android:focusable="true"
+                            android:paddingHorizontal="8dp"
                             android:contentDescription="@string/bridge_settings"
                             android:src="@drawable/connection_settings"
                             app:layout_constraintBottom_toBottomOf="@+id/tv_current_bridge_value"
@@ -137,7 +135,7 @@
                             android:id="@+id/view_divider"
                             android:layout_width="2dp"
                             android:layout_height="28dp"
-                            android:layout_marginEnd="12dp"
+                            android:layout_marginEnd="4dp"
                             android:background="@color/indigo50"
                             android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
                             app:layout_constraintBottom_toBottomOf="@+id/tv_current_bridge_value"
@@ -206,7 +204,7 @@
 
 
             </androidx.appcompat.widget.LinearLayoutCompat>
-        </ScrollView>
+        </androidx.core.widget.NestedScrollView>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
