--- a/app/src/main/res/layout/chip_item.xml
+++ b/app/src/main/res/layout/chip_item.xml
@@ -8,7 +8,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="an extremely long line with so much content I can't believe it"
+            tools:text="an extremely long line with so much content I can't believe it"
             android:textColor="@color/white"
             android:ellipsize="end"
             app:chipBackgroundColor="@android:color/transparent"
